salvia_macro/tests/input_access_ui/fail/host_traits_no_stashable.rs
use salvia::InputAccess;

#[derive(InputAccess)]
struct A(* const ());

fn main() {}